--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -12,5 +12,8 @@
         
         <!-- Include variations file -->
         <include domain="file" path="variations.json"/>
+
+        <!-- Include default/user dictionary file stored in app-private files -->
+        <include domain="file" path="user_defaults.json"/>
     </cloud-backup>
 </data-extraction-rules>
