--- a/app/src/main/res/xml/backup_rules.xml
+++ b/app/src/main/res/xml/backup_rules.xml
@@ -9,6 +9,7 @@
 <full-backup-content>
     <!-- Include all SharedPreferences (contains SYM mappings, auto-corrections, settings) -->
     <include domain="sharedpref" path="."/>
+    <exclude domain="sharedpref" path="recent_emojis_prefs.xml"/>
     
     <!-- Include custom keyboard layouts directory -->
     <include domain="file" path="keyboard_layouts/"/>
